ansible/app/app/k8s/network-policies/allow-app-redis-blue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-redis
  namespace: team-blue
spec:
  podSelector:
    matchLabels:
      app: cloudmemo
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - protocol: TCP
      port: 6379
