ansible/app/app/k8s/network-policies/default-deny-blue.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: team-blue
spec:
  podSelector: {}
  policyTypes:
  - Ingress
